fix: adjust cta button spacing

--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -147,7 +147,7 @@ ul {
 
   --grid-gap: 1.5rem;
 
-  --flex-group-gap: var(--grid-gap);
+  --flex-group-gap: 1.25rem var(--grid-gap);
 
   --navigation-background-color: var(--clr-primary-200);
   --navigation-color: var(--clr-primary-700);
